--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -3,13 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/random_list_container"
+    android:id="@+id/signal_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardBackgroundColor="@color/dark_background"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="15dp">
+    app:cardElevation="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
