--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -40,7 +40,8 @@
                 android:gravity="center"
                 android:inputType="textPassword"
                 android:autofillHints=""
-                tools:ignore="LabelFor" />
+                tools:ignore="LabelFor"
+                android:imeOptions="actionNext"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -75,7 +76,8 @@
                 android:gravity="center"
                 android:inputType="textPassword"
                 android:autofillHints=""
-                tools:ignore="LabelFor" />
+                tools:ignore="LabelFor"
+                android:imeOptions="actionDone"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
