--- a/app/src/main/res/layout-land/fragment_signals.xml
+++ b/app/src/main/res/layout-land/fragment_signals.xml
@@ -12,22 +12,25 @@
         tools:ignore="UselessParent">
 
         <LinearLayout
+            android:id="@+id/land_wins_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
             android:background="@color/dark_background"
             android:baselineAligned="false">
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_marginBottom="20dp">
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/total_signals"
+                    android:layout_weight="1"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="22sp"
@@ -35,7 +38,8 @@
                 <TextView
                     android:id="@+id/tv_total_signals"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/total_signals_ex"
@@ -46,11 +50,11 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_marginTop="20dp">
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
@@ -59,28 +63,29 @@
                     android:textStyle="bold"
                     android:textSize="22sp"
                     android:padding="5dp"/>
-                    <TextView
-                        android:id="@+id/tv_wins_total"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="@string/total_wins_ex"
-                        android:textColor="@color/white"
-                        android:textSize="22sp"
-                        android:padding="5dp"
-                        android:layout_weight="1"/>
-                    <TextView
-                        android:id="@+id/tv_wins_rate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="@string/total_wins_rate_ex"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:padding="5dp"
-                        android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/tv_wins_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/total_wins_ex"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:padding="5dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/tv_wins_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:maxLines="1"
+                    android:gravity="center"
+                    android:text="@string/total_wins_rate_ex"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:padding="5dp"
+                    android:layout_weight="1"/>
             </LinearLayout>
         </LinearLayout>
 
